syntax = "proto3";

option csharp_namespace = "TagTool.Backend";

package TagToolBackend;

service TagSearchService {
  rpc FindTags (FindTagsRequest) returns (stream FindTagsReply);
}

message FindTagsRequest {
  string partialTagName = 1;
  optional int32 maxReturn = 2;
}

message FindTagsReply {
  string tagName = 1;
}
